<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.OneScreenFragment">

    <TextView
        android:id="@+id/text_header_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_header_loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_value_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_text_value_progress"/>

    <ProgressBar
        android:id="@+id/progress_bar_one_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:progress="0"
        style="@style/ProgressBarOneScreen"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@+id/text_value_loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_header_lottie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar_one_screen"
        android:text="@string/text_header_lottie"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_download_one_screen"
        android:layout_width="@dimen/lottie_download_one_screen_width"
        android:layout_height="@dimen/lottie_download_one_screen_height"
        app:layout_constraintTop_toBottomOf="@id/text_header_lottie"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_vertical"
        app:lottie_url="REPLACE_JSON_URL"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/first_load"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/no_lottie_animation"
        android:layout_width="@dimen/lottie_download_one_screen_width"
        android:layout_height="@dimen/lottie_download_one_screen_height"
        app:layout_constraintTop_toBottomOf="@id/text_header_lottie"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="@dimen/no_lottie_animation_padding"
        android:paddingEnd="@dimen/no_lottie_animation_padding"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/no_lottie_animation"
        android:textColor="@color/black"
        android:background="@color/background_no_lottie_animation"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/button_start_animation"
        android:layout_width="@dimen/button_weight"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_screen_one_min"
        android:gravity="center"
        android:padding="@dimen/button_padding_min"
        android:text="@string/button_start_animation"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/text_header_lottie"
        app:layout_constraintStart_toEndOf="@id/lottie_download_one_screen"
        app:layout_constraintTop_toTopOf="@id/lottie_download_one_screen"
        app:layout_constraintStart_toStartOf="@id/button_stop_animation"
         />

    <TextView
        android:id="@+id/button_stop_animation"
        android:layout_width="@dimen/button_weight"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:background="@drawable/background_button_screen_one_min"
        android:gravity="center"
        android:padding="@dimen/button_padding_min"
        android:text="@string/button_stop_animation"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/button_start_animation"
        app:layout_constraintStart_toEndOf="@id/lottie_download_one_screen"
        app:layout_constraintBottom_toTopOf="@id/button_hide_show_animation"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/button_hide_show_animation"
        android:layout_width="@dimen/button_weight"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_screen_one_min"
        android:gravity="center"
        android:padding="@dimen/button_padding_min"
        android:text="@string/button_hide_show_animation"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/lottie_download_one_screen"
        app:layout_constraintStart_toEndOf="@id/lottie_download_one_screen"
        app:layout_constraintStart_toStartOf="@id/button_stop_animation"/>

    <TextView
        android:id="@+id/button_custom_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_screen_one"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/button_show_custom_alert"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/lottie_download_one_screen"
        app:layout_constraintBottom_toTopOf="@id/button_go_second_screen"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/button_go_second_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_screen_one"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/button_go_second_screen"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.3"/>


</androidx.constraintlayout.widget.ConstraintLayout>